--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         <div id="status-container">
             <p id="status-message">Jogador X, é a sua vez!</p>
         </div>
+        <div class="theme-switch-wrapper">
+            <label class="theme-switch" for="checkbox">
+                <input type="checkbox" id="checkbox" />
+                <div class="slider round"></div>
+            </label>
+            <em>Modo Escuro</em>
+        </div>
         <div id="board" class="board"></div>
         <div id="scoreboard">
             <h2>Placar</h2>
