feat: add clear scores functionality with button and localStorage integration

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <p><span id="score-o"></span></p>
         </div>
         <button id="restart-button">Reiniciar Jogo</button>
+        <button id="clear-scores-button">Limpar Placar</button>
         </div>
     </main>
     <script src="app.js" type="module"></script>
